--- a/test/fixtures/paintings.yml
+++ b/test/fixtures/paintings.yml
@@ -1,17 +1,4 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
+painting:
   title: MyString
-  size: MyString
-  medium: MyString
-  price: MyString
-  new: 
-  sold: 
-
-two:
-  title: MyString
-  size: MyString
-  medium: MyString
-  price: MyString
-  new: 
-  sold: 
+  price: 420
+  sold: true
