--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "bs-custom-file-input": "^1.3.2",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "node-sass": "^7.0.0"
   },
   "version": "0.1.0",
   "devDependencies": {
